# Mine-sweeper

./: CMakeLists.txt  README.md
Images/: Emoji.png.url  Font (1).png.url  Icons16.png.url  Icons8.png.url
SourceFiles/: Board.cpp  CreateText.cpp  GetSquare.cpp  Main.cpp  Square.cpp
SourceFiles/Headers/: BaseConfig.hpp  Board.hpp  CreateText.hpp  GetSquare.hpp  Square.hpp
